@@ -81,6 +81,14 @@ specifier|private
 name|Set
 name|stopSet
 decl_stmt|;
+comment|/**    * Specifies whether deprecated acronyms should be replaced with HOST type.    * This is false by default to support backward compatibility.    *     * @deprecated this should be removed in the next release (3.0).    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    */
+DECL|field|replaceInvalidAcronym
+specifier|private
+name|boolean
+name|replaceInvalidAcronym
+init|=
+literal|false
+decl_stmt|;
 comment|/** An array containing some common English words that are usually not   useful for searching. */
 DECL|field|STOP_WORDS
 specifier|public
@@ -182,6 +190,127 @@ name|stopwords
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    *    * @param replaceInvalidAcronym Set to true if this analyzer should replace mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    *    * @deprecated Remove in 3.X and make true the only valid value    */
+DECL|method|StandardAnalyzer
+specifier|public
+name|StandardAnalyzer
+parameter_list|(
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+block|{
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
+block|}
+comment|/**    *  @param stopwords The stopwords to use    * @param replaceInvalidAcronym Set to true if this analyzer should replace mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    *    * @deprecated Remove in 3.X and make true the only valid value    */
+DECL|method|StandardAnalyzer
+specifier|public
+name|StandardAnalyzer
+parameter_list|(
+name|Reader
+name|stopwords
+parameter_list|,
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|stopwords
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
+block|}
+comment|/**    * @param stopwords The stopwords to use    * @param replaceInvalidAcronym Set to true if this analyzer should replace mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    *    * @deprecated Remove in 3.X and make true the only valid value    */
+DECL|method|StandardAnalyzer
+specifier|public
+name|StandardAnalyzer
+parameter_list|(
+name|File
+name|stopwords
+parameter_list|,
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|stopwords
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
+block|}
+comment|/**    *    * @param stopwords The stopwords to use    * @param replaceInvalidAcronym Set to true if this analyzer should replace mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    *    * @deprecated Remove in 3.X and make true the only valid value    */
+DECL|method|StandardAnalyzer
+specifier|public
+name|StandardAnalyzer
+parameter_list|(
+name|String
+index|[]
+name|stopwords
+parameter_list|,
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|stopwords
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
+block|}
+comment|/**    * @param stopwords The stopwords to use    * @param replaceInvalidAcronym Set to true if this analyzer should replace mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    *    * @deprecated Remove in 3.X and make true the only valid value    */
+DECL|method|StandardAnalyzer
+specifier|public
+name|StandardAnalyzer
+parameter_list|(
+name|Set
+name|stopwords
+parameter_list|,
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|stopwords
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
+block|}
 comment|/** Constructs a {@link StandardTokenizer} filtered by a {@link   StandardFilter}, a {@link LowerCaseFilter} and a {@link StopFilter}. */
 DECL|method|tokenStream
 specifier|public
@@ -202,6 +331,8 @@ operator|new
 name|StandardTokenizer
 argument_list|(
 name|reader
+argument_list|,
+name|replaceInvalidAcronym
 argument_list|)
 decl_stmt|;
 name|result
@@ -341,6 +472,7 @@ argument_list|)
 expr_stmt|;
 block|}
 else|else
+block|{
 name|streams
 operator|.
 name|tokenStream
@@ -350,11 +482,49 @@ argument_list|(
 name|reader
 argument_list|)
 expr_stmt|;
+block|}
+name|streams
+operator|.
+name|tokenStream
+operator|.
+name|setReplaceInvalidAcronym
+argument_list|(
+name|replaceInvalidAcronym
+argument_list|)
+expr_stmt|;
 return|return
 name|streams
 operator|.
 name|filteredTokenStream
 return|;
+block|}
+comment|/**    *    * @return true if this Analyzer is replacing mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    */
+DECL|method|isReplaceInvalidAcronym
+specifier|public
+name|boolean
+name|isReplaceInvalidAcronym
+parameter_list|()
+block|{
+return|return
+name|replaceInvalidAcronym
+return|;
+block|}
+comment|/**    *    * @param replaceInvalidAcronym Set to true if this Analyzer is replacing mischaracterized acronyms in the StandardTokenizer    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    */
+DECL|method|setReplaceInvalidAcronym
+specifier|public
+name|void
+name|setReplaceInvalidAcronym
+parameter_list|(
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+block|{
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
 block|}
 block|}
 end_class
