@@ -78,6 +78,14 @@ specifier|final
 name|StandardTokenizerImpl
 name|scanner
 decl_stmt|;
+comment|/**    * Specifies whether deprecated acronyms should be replaced with HOST type.    * This is false by default to support backward compatibility.    *<p/>    * See http://issues.apache.org/jira/browse/LUCENE-1068    *     * @deprecated this should be removed in the next release (3.0).    */
+DECL|field|replaceInvalidAcronym
+specifier|private
+name|boolean
+name|replaceInvalidAcronym
+init|=
+literal|false
+decl_stmt|;
 DECL|method|setInput
 name|void
 name|setInput
@@ -102,6 +110,41 @@ name|Reader
 name|input
 parameter_list|)
 block|{
+name|this
+operator|.
+name|input
+operator|=
+name|input
+expr_stmt|;
+name|this
+operator|.
+name|scanner
+operator|=
+operator|new
+name|StandardTokenizerImpl
+argument_list|(
+name|input
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Creates a new instance of the {@link org.apache.lucene.analysis.standard.StandardTokenizer}.  Attaches    * the<code>input</code> to the newly created JFlex scanner.    *    * @param input The input reader    * @param replaceInvalidAcronym Set to true to replace mischaracterized acronyms with HOST.    *    * See http://issues.apache.org/jira/browse/LUCENE-1068    */
+DECL|method|StandardTokenizer
+specifier|public
+name|StandardTokenizer
+parameter_list|(
+name|Reader
+name|input
+parameter_list|,
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+block|{
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
+expr_stmt|;
 name|this
 operator|.
 name|input
@@ -187,6 +230,71 @@ name|termLength
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// This 'if' should be removed in the next release. For now, it converts
+comment|// invalid acronyms to HOST. When removed, only the 'else' part should
+comment|// remain.
+if|if
+condition|(
+name|tokenType
+operator|==
+name|StandardTokenizerImpl
+operator|.
+name|ACRONYM_DEP
+condition|)
+block|{
+if|if
+condition|(
+name|replaceInvalidAcronym
+condition|)
+block|{
+name|result
+operator|.
+name|setType
+argument_list|(
+name|StandardTokenizerImpl
+operator|.
+name|TOKEN_TYPES
+index|[
+name|StandardTokenizerImpl
+operator|.
+name|HOST
+index|]
+argument_list|)
+expr_stmt|;
+name|result
+operator|.
+name|setTermLength
+argument_list|(
+name|result
+operator|.
+name|termLength
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+comment|// remove extra '.'
+block|}
+else|else
+block|{
+name|result
+operator|.
+name|setType
+argument_list|(
+name|StandardTokenizerImpl
+operator|.
+name|TOKEN_TYPES
+index|[
+name|StandardTokenizerImpl
+operator|.
+name|ACRONYM
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
 name|result
 operator|.
 name|setType
@@ -199,6 +307,7 @@ name|tokenType
 index|]
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|result
 return|;
@@ -242,6 +351,34 @@ name|reader
 expr_stmt|;
 name|reset
 argument_list|()
+expr_stmt|;
+block|}
+comment|/**    * Prior to https://issues.apache.org/jira/browse/LUCENE-1068, StandardTokenizer mischaracterized as acronyms tokens like www.abc.com    * when they should have been labeled as hosts instead.    * @return true if StandardTokenizer now returns these tokens as Hosts, otherwise false    *    * @deprecated Remove in 3.X and make true the only valid value    */
+DECL|method|isReplaceInvalidAcronym
+specifier|public
+name|boolean
+name|isReplaceInvalidAcronym
+parameter_list|()
+block|{
+return|return
+name|replaceInvalidAcronym
+return|;
+block|}
+comment|/**    *    * @param replaceInvalidAcronym Set to true to replace mischaracterized acronyms as HOST.    * @deprecated Remove in 3.X and make true the only valid value    *    * See https://issues.apache.org/jira/browse/LUCENE-1068    */
+DECL|method|setReplaceInvalidAcronym
+specifier|public
+name|void
+name|setReplaceInvalidAcronym
+parameter_list|(
+name|boolean
+name|replaceInvalidAcronym
+parameter_list|)
+block|{
+name|this
+operator|.
+name|replaceInvalidAcronym
+operator|=
+name|replaceInvalidAcronym
 expr_stmt|;
 block|}
 block|}
