@@ -1,6 +1,6 @@
 begin_unit
 begin_comment
-comment|/* The following code was generated by JFlex 1.4.1 on 8/9/07 10:15 AM */
+comment|/* The following code was generated by JFlex 1.4.1 on 12/18/07 9:22 PM */
 end_comment
 begin_package
 DECL|package|org.apache.lucene.analysis.standard
@@ -33,7 +33,7 @@ name|Token
 import|;
 end_import
 begin_comment
-comment|/**  * This class is a scanner generated by   *<a href="http://www.jflex.de/">JFlex</a> 1.4.1  * on 8/9/07 10:15 AM from the specification file  *<tt>/tango/mike/src/lucene.tokenfix/src/java/org/apache/lucene/analysis/standard/StandardTokenizerImpl.jflex</tt>  */
+comment|/**  * This class is a scanner generated by   *<a href="http://www.jflex.de/">JFlex</a> 1.4.1  * on 12/18/07 9:22 PM from the specification file  *<tt>/Volumes/User/grantingersoll/projects/lucene/java/lucene-clean/src/java/org/apache/lucene/analysis/standard/StandardTokenizerImpl.jflex</tt>  */
 end_comment
 begin_class
 DECL|class|StandardTokenizerImpl
@@ -128,11 +128,13 @@ specifier|final
 name|String
 name|ZZ_ACTION_PACKED_0
 init|=
-literal|"\1\0\1\1\4\2\1\3\1\1\14\0\1\4\4\5"
+literal|"\1\0\1\1\4\2\1\3\1\1\6\0\2\2\6\0"
 operator|+
-literal|"\2\6\2\0\1\7\1\0\1\7\3\5\6\7\3\5"
+literal|"\1\4\4\5\2\6\2\0\1\7\1\0\1\7\3\5"
 operator|+
-literal|"\1\10\4\0\1\10\2\0\2\10\2\5\1\11"
+literal|"\6\7\3\5\1\10\1\0\1\11\2\0\1\10\1\11"
+operator|+
+literal|"\1\0\2\11\2\10\2\5\1\12"
 decl_stmt|;
 DECL|method|zzUnpackAction
 specifier|private
@@ -149,7 +151,7 @@ init|=
 operator|new
 name|int
 index|[
-literal|57
+literal|61
 index|]
 decl_stmt|;
 name|int
@@ -285,15 +287,15 @@ literal|"\0\151\0\170\0\207\0\226\0\245\0\264\0\303\0\322"
 operator|+
 literal|"\0\341\0\360\0\377\0\u010e\0\u011d\0\u012c\0\u013b\0\u014a"
 operator|+
-literal|"\0\u0159\0\207\0\u0168\0\u0177\0\u0186\0\u0195\0\u01a4\0\u01b3"
+literal|"\0\u0159\0\u0168\0\u0177\0\207\0\u0186\0\u0195\0\u01a4\0\u01b3"
 operator|+
 literal|"\0\u01c2\0\u01d1\0\u01e0\0\u01ef\0\u01fe\0\u020d\0\u021c\0\u022b"
 operator|+
 literal|"\0\u023a\0\u0249\0\u0258\0\u0267\0\u0276\0\u0285\0\u0294\0\u02a3"
 operator|+
-literal|"\0\u02b2\0\u02c1\0\u02d0\0\u02df\0\170\0\377\0\u02ee\0\u02fd"
+literal|"\0\u02b2\0\u02c1\0\u02d0\0\u02df\0\u02ee\0\u02fd\0\u012c\0\341"
 operator|+
-literal|"\0\u030c"
+literal|"\0\170\0\u011d\0\u030c\0\u031b\0\u032a"
 decl_stmt|;
 DECL|method|zzUnpackRowMap
 specifier|private
@@ -310,7 +312,7 @@ init|=
 operator|new
 name|int
 index|[
-literal|57
+literal|61
 index|]
 decl_stmt|;
 name|int
@@ -432,85 +434,87 @@ name|ZZ_TRANS_PACKED_0
 init|=
 literal|"\10\2\1\3\1\4\1\5\1\6\1\7\1\10\1\2"
 operator|+
-literal|"\20\0\1\11\1\12\1\13\1\14\2\15\1\16\1\3"
+literal|"\20\0\1\11\1\12\1\13\1\14\2\15\1\16\1\17"
 operator|+
-literal|"\1\4\1\5\1\6\5\0\1\17\1\0\1\20\2\21"
+literal|"\1\4\1\20\1\6\5\0\1\21\1\0\1\22\2\23"
 operator|+
-literal|"\1\22\3\4\1\6\4\0\1\11\1\23\1\13\1\14"
+literal|"\1\24\3\4\1\6\4\0\1\11\1\25\1\13\1\14"
 operator|+
-literal|"\2\21\1\22\1\5\1\4\1\5\1\6\5\0\1\24"
+literal|"\2\23\1\24\1\20\1\4\1\20\1\6\5\0\1\26"
 operator|+
-literal|"\1\0\1\20\2\15\1\16\4\6\21\0\1\2\10\0"
+literal|"\1\0\1\22\2\15\1\16\4\6\21\0\1\2\10\0"
 operator|+
-literal|"\1\25\1\0\1\25\14\0\1\26\1\27\1\30\1\31"
+literal|"\1\27\1\0\1\27\14\0\1\30\1\31\1\32\1\33"
 operator|+
-literal|"\13\0\1\32\1\0\1\32\14\0\1\33\1\34\1\33"
+literal|"\13\0\1\34\1\0\1\34\14\0\1\35\1\36\1\35"
 operator|+
-literal|"\1\34\13\0\1\35\2\36\1\37\13\0\1\16\2\40"
+literal|"\1\36\13\0\1\37\2\40\1\41\13\0\1\16\2\42"
 operator|+
-literal|"\14\0\1\41\2\42\1\43\13\0\4\34\13\0\1\44"
+literal|"\5\0\1\11\1\26\1\13\1\14\2\15\1\16\1\17"
 operator|+
-literal|"\2\45\1\46\13\0\1\47\2\50\1\51\13\0\1\52"
+literal|"\1\4\1\20\1\6\4\0\1\11\1\21\1\13\1\14"
 operator|+
-literal|"\1\42\1\53\1\43\13\0\1\54\2\27\1\31\4\0"
+literal|"\2\23\1\24\1\20\1\4\1\20\1\6\13\0\1\43"
 operator|+
-literal|"\1\11\6\0\1\25\1\0\1\25\6\0\1\55\1\0"
+literal|"\2\44\1\45\13\0\4\36\13\0\1\46\2\47\1\50"
 operator|+
-literal|"\1\20\2\56\1\0\1\26\1\27\1\30\1\31\5\0"
+literal|"\13\0\1\51\2\52\1\53\13\0\1\54\1\44\1\55"
 operator|+
-literal|"\1\57\1\0\1\20\2\60\1\61\3\27\1\31\5\0"
+literal|"\1\45\13\0\1\56\2\31\1\33\4\0\1\11\6\0"
 operator|+
-literal|"\1\62\1\0\1\20\2\60\1\61\1\30\1\27\1\30"
+literal|"\1\27\1\0\1\27\6\0\1\57\1\0\1\22\2\60"
 operator|+
-literal|"\1\31\5\0\1\63\1\0\1\20\2\56\1\0\4\31"
+literal|"\1\0\1\56\2\31\1\33\5\0\1\61\1\0\1\22"
 operator|+
-literal|"\5\0\1\64\2\0\1\64\2\0\1\33\1\34\1\33"
+literal|"\2\62\1\63\3\31\1\33\5\0\1\64\1\0\1\22"
 operator|+
-literal|"\1\34\5\0\1\64\2\0\1\64\2\0\4\34\5\0"
+literal|"\2\62\1\63\3\31\1\33\5\0\1\65\1\0\1\22"
 operator|+
-literal|"\1\56\1\0\1\20\2\56\1\0\1\35\2\36\1\37"
+literal|"\2\60\1\0\4\33\5\0\1\66\2\0\1\66\2\0"
 operator|+
-literal|"\5\0\1\60\1\0\1\20\2\60\1\61\3\36\1\37"
+literal|"\1\35\1\36\1\35\1\36\5\0\1\66\2\0\1\66"
 operator|+
-literal|"\5\0\1\56\1\0\1\20\2\56\1\0\4\37\5\0"
+literal|"\2\0\4\36\5\0\1\60\1\0\1\22\2\60\1\0"
 operator|+
-literal|"\1\61\2\0\3\61\3\40\6\0\1\24\1\0\1\20"
+literal|"\1\37\2\40\1\41\5\0\1\62\1\0\1\22\2\62"
 operator|+
-literal|"\2\15\1\16\1\41\2\42\1\43\5\0\1\17\1\0"
+literal|"\1\63\3\40\1\41\5\0\1\60\1\0\1\22\2\60"
 operator|+
-literal|"\1\20\2\21\1\22\3\42\1\43\5\0\1\24\1\0"
+literal|"\1\0\4\41\5\0\1\63\2\0\3\63\3\42\6\0"
 operator|+
-literal|"\1\20\2\15\1\16\4\43\5\0\1\15\1\0\1\20"
+literal|"\1\67\1\0\1\22\2\15\1\16\1\43\2\44\1\45"
 operator|+
-literal|"\2\15\1\16\1\44\2\45\1\46\5\0\1\21\1\0"
+literal|"\5\0\1\70\1\0\1\22\2\23\1\24\3\44\1\45"
 operator|+
-literal|"\1\20\2\21\1\22\3\45\1\46\5\0\1\15\1\0"
+literal|"\5\0\1\67\1\0\1\22\2\15\1\16\4\45\5\0"
 operator|+
-literal|"\1\20\2\15\1\16\4\46\5\0\1\16\2\0\3\16"
+literal|"\1\15\1\0\1\22\2\15\1\16\1\46\2\47\1\50"
 operator|+
-literal|"\1\47\2\50\1\51\5\0\1\22\2\0\3\22\3\50"
+literal|"\5\0\1\23\1\0\1\22\2\23\1\24\3\47\1\50"
 operator|+
-literal|"\1\51\5\0\1\16\2\0\3\16\4\51\5\0\1\65"
+literal|"\5\0\1\15\1\0\1\22\2\15\1\16\4\50\5\0"
 operator|+
-literal|"\1\0\1\20\2\15\1\16\1\52\1\42\1\53\1\43"
+literal|"\1\16\2\0\3\16\1\51\2\52\1\53\5\0\1\24"
 operator|+
-literal|"\5\0\1\66\1\0\1\20\2\21\1\22\1\53\1\42"
+literal|"\2\0\3\24\3\52\1\53\5\0\1\16\2\0\3\16"
 operator|+
-literal|"\1\53\1\43\5\0\1\63\1\0\1\20\2\56\1\0"
+literal|"\4\53\5\0\1\71\1\0\1\22\2\15\1\16\1\43"
 operator|+
-literal|"\1\54\2\27\1\31\13\0\1\67\1\31\1\67\1\31"
+literal|"\2\44\1\45\5\0\1\72\1\0\1\22\2\23\1\24"
 operator|+
-literal|"\13\0\4\37\13\0\4\43\13\0\4\46\13\0\4\51"
+literal|"\3\44\1\45\5\0\1\65\1\0\1\22\2\60\1\0"
 operator|+
-literal|"\13\0\1\70\1\43\1\70\1\43\13\0\4\31\13\0"
+literal|"\1\56\2\31\1\33\13\0\1\73\1\33\1\73\1\33"
 operator|+
-literal|"\4\71\5\0\1\55\1\0\1\20\2\56\1\0\1\67"
+literal|"\13\0\4\41\13\0\4\45\13\0\4\50\13\0\4\53"
 operator|+
-literal|"\1\31\1\67\1\31\5\0\1\65\1\0\1\20\2\15"
+literal|"\13\0\1\74\1\45\1\74\1\45\13\0\4\33\13\0"
 operator|+
-literal|"\1\16\1\70\1\43\1\70\1\43\5\0\1\64\2\0"
+literal|"\4\75\5\0\1\57\1\0\1\22\2\60\1\0\4\33"
 operator|+
-literal|"\1\64\2\0\4\71\3\0"
+literal|"\5\0\1\71\1\0\1\22\2\15\1\16\4\45\5\0"
+operator|+
+literal|"\1\66\2\0\1\66\2\0\4\75\3\0"
 decl_stmt|;
 DECL|method|zzUnpackTrans
 specifier|private
@@ -527,7 +531,7 @@ init|=
 operator|new
 name|int
 index|[
-literal|795
+literal|825
 index|]
 decl_stmt|;
 name|int
@@ -705,9 +709,11 @@ specifier|final
 name|String
 name|ZZ_ATTRIBUTE_PACKED_0
 init|=
-literal|"\1\0\1\11\4\1\1\11\1\1\14\0\7\1\2\0"
+literal|"\1\0\1\11\4\1\1\11\1\1\6\0\2\1\6\0"
 operator|+
-literal|"\1\1\1\0\16\1\4\0\1\1\2\0\5\1"
+literal|"\7\1\2\0\1\1\1\0\16\1\1\0\1\1\2\0"
+operator|+
+literal|"\2\1\1\0\7\1"
 decl_stmt|;
 DECL|method|zzUnpackAttribute
 specifier|private
@@ -724,7 +730,7 @@ init|=
 operator|new
 name|int
 index|[
-literal|57
+literal|61
 index|]
 decl_stmt|;
 name|int
@@ -1007,6 +1013,16 @@ name|CJ
 init|=
 literal|7
 decl_stmt|;
+comment|/**  * @deprecated this solves a bug where HOSTs that end with '.' are identified  *             as ACRONYMs. It is deprecated and will be removed in the next  *             release.  */
+DECL|field|ACRONYM_DEP
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|ACRONYM_DEP
+init|=
+literal|8
+decl_stmt|;
 DECL|field|TOKEN_TYPES
 specifier|public
 specifier|static
@@ -1034,6 +1050,8 @@ block|,
 literal|"<NUM>"
 block|,
 literal|"<CJ>"
+block|,
+literal|"<ACRONYM_DEP>"
 block|}
 decl_stmt|;
 DECL|method|yychar
@@ -1882,7 +1900,19 @@ name|HOST
 return|;
 block|}
 case|case
-literal|10
+literal|11
+case|:
+break|break;
+case|case
+literal|9
+case|:
+block|{
+return|return
+name|ACRONYM_DEP
+return|;
+block|}
+case|case
+literal|12
 case|:
 break|break;
 case|case
@@ -1894,7 +1924,7 @@ name|ACRONYM
 return|;
 block|}
 case|case
-literal|11
+literal|13
 case|:
 break|break;
 case|case
@@ -1904,7 +1934,7 @@ block|{
 comment|/* ignore */
 block|}
 case|case
-literal|12
+literal|14
 case|:
 break|break;
 case|case
@@ -1916,7 +1946,7 @@ name|NUM
 return|;
 block|}
 case|case
-literal|13
+literal|15
 case|:
 break|break;
 case|case
@@ -1928,7 +1958,7 @@ name|CJ
 return|;
 block|}
 case|case
-literal|14
+literal|16
 case|:
 break|break;
 case|case
@@ -1940,7 +1970,7 @@ name|ALPHANUM
 return|;
 block|}
 case|case
-literal|15
+literal|17
 case|:
 break|break;
 case|case
@@ -1952,7 +1982,7 @@ name|COMPANY
 return|;
 block|}
 case|case
-literal|16
+literal|18
 case|:
 break|break;
 case|case
@@ -1964,11 +1994,11 @@ name|APOSTROPHE
 return|;
 block|}
 case|case
-literal|17
+literal|19
 case|:
 break|break;
 case|case
-literal|9
+literal|10
 case|:
 block|{
 return|return
@@ -1976,7 +2006,7 @@ name|EMAIL
 return|;
 block|}
 case|case
-literal|18
+literal|20
 case|:
 break|break;
 default|default:
