@@ -575,6 +575,63 @@ literal|"www.nutch.org"
 block|}
 argument_list|)
 expr_stmt|;
+comment|//Notice the trailing .  See https://issues.apache.org/jira/browse/LUCENE-1068.
+comment|//TODO: Remove in 3.x
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"www.nutch.org."
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"wwwnutchorg"
+block|}
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"<ACRONYM>"
+block|}
+argument_list|)
+expr_stmt|;
+comment|// the following should be recognized as HOST. The code that sets replaceDepAcronym should be removed in the next release.
+operator|(
+operator|(
+name|StandardAnalyzer
+operator|)
+name|a
+operator|)
+operator|.
+name|setReplaceInvalidAcronym
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"www.nutch.org."
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"www.nutch.org"
+block|}
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"<HOST>"
+block|}
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testEMailAddresses
 specifier|public
@@ -1175,6 +1232,39 @@ block|,
 literal|"<ALPHANUM>"
 block|,
 literal|"<HOST>"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** @deprecated this should be removed in the 3.0. */
+DECL|method|testDeprecatedAcronyms
+specifier|public
+name|void
+name|testDeprecatedAcronyms
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test backward compatibility for applications that require the old behavior.
+comment|// this should be removed once replaceDepAcronym is removed.
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"lucene.apache.org."
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"luceneapacheorg"
+block|}
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"<ACRONYM>"
 block|}
 argument_list|)
 expr_stmt|;
